--- a/assignments/week8/interest.html
+++ b/assignments/week8/interest.html
@@ -4,20 +4,100 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nasic APR interest calculator</title>
+    <title>Basic APR Interest Calculator</title>
 
+    <script src="jquery-3.6.0.min.js"></script>
+    <script src="interest.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Oswald', sans-serif;
+        }
+
+        h1 {
+            font-size: 36px;
+            text-align: center;
+            text-transform: uppercase;
+            margin-top: 0; 
+        }
+
+        #container {
+            width: 400px;
+            box-shadow: 0 0 100px 100px #f6f5f8;
+            border-radius: 10px;
+            /* border: 1px solid rgb(125,125,125); */
+            margin: 40px auto 0 auto;
+            padding: 20px;
+        }
+
+        #disclaimer {
+            font-size: .75em;
+            color:lightgray;
+            text-align: justify;
+        }
+
+        #result-value {
+            height: 75px;
+        }
+
+        label {
+            font-size: 1.25em;
+            text-transform: uppercase;
+        }
+
+        input {
+            margin-bottom: 20px;
+            width: 95%;
+            font-size: 1.25em;
+            padding: .50em;
+            border-radius: 10px;
+            border: none;
+            background-color:whitesmoke;
+            text-align: center;
+        }
+
+        #submit {
+            width: 100%;
+            font-size: 1.25em;
+            font-family: 'Oswald', sans-serif;
+            border-radius: 10px;
+            background-color:navy;
+            color: white;
+            border: none;
+            padding-top: 7px;
+            padding-bottom: 7px;
+            margin-top: 20px;
+        }
+
+        #result-value {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <div id="container">
-        <div id="intructions">
-            <h1>Basic interest Calculator</h1>
-            <p>Use this calculator to figure out how much you
-                will pay after one month after opening the loan
-            or credit </p>
-        </div>
-        <div id="form"></div>
-        <div id="result"></div>
 
+    <div id="container">
+        <div id="instructions">
+            <h1>Basic Interest Calculator</h1>
+            <p>Use this calculator to figure out how much it will cost per month to borrow money.</p>
+        </div>
+        <div id="form">
+            <label id="loan-label" for="loan-amount">Loan Amount</label><br />
+            <input id="loan-amount" type="number" placeholder="10000" /><br />
+            <label id="apr-label" for="apr">APR Percentage</label><br />
+            <input id="apr" type="number" placeholder="23.99" /><br />
+            <!-- If we have extra time, allow an option that selects compound interest frequency: daily, monthly, or yearly. -->
+            <button id="submit">Calculate!</button>
+        </div>
+        <div id="results">
+            <p id="result-value"></p>
+            <p id="disclaimer">Interest Rate Calculated is based on Monthly Compounding Interest, where a Month is 30 Days. We are not responsible for any errors or incorrect information provided by this tool. Please contact your local financial advisor before making any financial decisions.</p>
+        </div>
     </div>
+
 </body>
 </html>
